Initial commit of Symfony project

--- a/templates/editor/index.html.twig
+++ b/templates/editor/index.html.twig
@@ -1,10 +1,11 @@
 {# templates/editor/index.html.twig #}
 {% extends 'base.html.twig' %}
 
-{% block title %}User Details{% endblock %}
+{% block title %}Editor Details{% endblock %}
 
 {% block body %}
-    <h1>User Details</h1>
+    <h1>Editor Details</h1>
+    <h1>Editor Details</h1>
     {% if user %}
         <p>Username: {{ user.username }}</p>
         <p>Email: {{ user.email }}</p>
