--- a/assets/css/templatemo-topic-listing.css
+++ b/assets/css/templatemo-topic-listing.css
@@ -10,10 +10,10 @@ https://templatemo.com/tm-590-topic-listing
   CUSTOM PROPERTIES ( VARIABLES )             
 -----------------------------------------*/
 :root {
-  --white-color:                  #ffffff;
-  --primary-color:                #13547a;
+  --white-color:                  #c4dcea;
+  --primary-color:                #1a597e;
   --secondary-color:              #80d0c7;
-  --section-bg-color:             #f0f8ff;
+  --section-bg-color:             #5788b4;
   --custom-btn-bg-color:          #80d0c7;
   --custom-btn-bg-hover-color:    #13547a;
   --dark-color:                   #000000;
