--- a/templates/admin/show.html.twig
+++ b/templates/admin/show.html.twig
@@ -1,5 +1,5 @@
-{# templates/signup/show.html.twig #}
-{% extends 'base.html.twig' %}
+{# templates/admin/show.html.twig #}
+{% extends 'base2.html.twig' %}
 
 {% block title %}Liste des Utilisateurs{% endblock %}
 
