--- a/templates/base2.html.twig
+++ b/templates/base2.html.twig
@@ -16,7 +16,9 @@
     <link href="{{ asset('css/bootstrap-icons.css') }}" rel="stylesheet">
     <link href="{{ asset('css/templatemo-topic-listing.css') }}" rel="stylesheet">
 
-    {% block stylesheets %}{% endblock %}
+    {% block stylesheets %}
+    <link href="{{ asset('css/styles.css') }}" rel="stylesheet">
+    {% endblock %}
 </head>
         <body id="top">
     {% include '_navbar2.html.twig' %}
@@ -34,6 +36,7 @@
     <script src="{{ asset('js/custom.js') }}"></script>
 
         {% endblock %}
+         {% include '_footer.html.twig' %}
 
     {% block javascripts %}{% endblock %}
 </body>
