--- a/templates/user/edit.html.twig
+++ b/templates/user/edit.html.twig
@@ -28,6 +28,11 @@
         {{ form_widget(form.numeroTelephone, {'attr': {'class': 'form-control'}}) }}
         {{ form_errors(form.numeroTelephone) }}
     </div>
+        <div class="form-group">
+        {{ form_label(form.password, 'Mot De Passe') }}
+        {{ form_widget(form.password, {'attr': {'class': 'form-control'}}) }}
+        {{ form_errors(form.password) }}
+    </div>
 
     <button type="submit" class="btn btn-primary">Enregistrer</button>
     {{ form_end(form) }}
