--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -1,15 +1,16 @@
 {# templates/user/index.html.twig #}
-{% extends 'base.html.twig' %}
+{% extends 'base2.html.twig' %}
 
-{% block title %}User Details{% endblock %}
+{% block title %}Détails de l'utilisateur{% endblock %}
 
 {% block body %}
-    <h1>User Details</h1>
+    <h1>Détails de l'utilisateur</h1>
+    <h2>Bienvenue dans votre espace utilisateur</h2>
     {% if user %}
-        <p>Username: {{ user.username }}</p>
-        <p>Email: {{ user.email }}</p>
-        <p>Roles: {{ user.roles|join(', ') }}</p>
+        <p>Nom d'utilisateur : {{ user.username }}</p>
+        <p>Email : {{ user.email }}</p>
+        <p>Rôles : {{ user.roles|join(', ') }}</p>
     {% else %}
-        <p>No user data available.</p>
+        <p>Aucune donnée utilisateur disponible.</p>
     {% endif %}
 {% endblock %}
