Initial commit of Symfony project

--- a/templates/editor/index.html.twig
+++ b/templates/editor/index.html.twig
@@ -1,16 +1,16 @@
 {# templates/editor/index.html.twig #}
-{% extends 'base.html.twig' %}
+{% extends 'base2.html.twig' %}
 
-{% block title %}Editor Details{% endblock %}
+{% block title %}Détails de l'editeur{% endblock %}
 
 {% block body %}
-    <h1>Editor Details</h1>
-    <h1>Editor Details</h1>
+    <h1>Détails de l'editeur</h1>
+    <h2>Bienvenue dans votre espace editeur</h2>
     {% if user %}
-        <p>Username: {{ user.username }}</p>
-        <p>Email: {{ user.email }}</p>
-        <p>Roles: {{ user.roles|join(', ') }}</p>
+        <p>Nom d'editeur : {{ user.username }}</p>
+        <p>Email : {{ user.email }}</p>
+        <p>Rôles : {{ user.roles|join(', ') }}</p>
     {% else %}
-        <p>No user data available.</p>
+        <p>Aucune donnée editeur disponible.</p>
     {% endif %}
 {% endblock %}
