--- a/templates/admin/show.html.twig
+++ b/templates/admin/show.html.twig
@@ -12,7 +12,7 @@
                 <th>Email</th>
                 <th>Adresse</th>
                 <th>Rôle</th>
-                <th>Password</th>
+                <th>Mot de passe</th>
                 <th>Actions</th>
             </tr>
         </thead>
@@ -25,15 +25,15 @@
                 <td>{{ i.roles|join(', ') }}</td>
                 <td>{{ i.password }}</td>
                 <td>
-                    <a href="{{ path('app_edit', {'id': i.id}) }}" class="btn btn-primary">Edit</a>
-                    <a href="{{ path('app_delete', {'id': i.id}) }}" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete this user?');">Delete</a>
+                    <a href="{{ path('app_edit', {'id': i.id}) }}" class="btn btn-primary">Modifier</a>
+                    <a href="{{ path('app_delete', {'id': i.id}) }}" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete this user?');">Supprimer</a>
                 </td>
             </tr>
             {% endfor %}
         </tbody>
     </table>
 
-    <a href="{{ path('app_register') }}" class="btn btn-success">
+    <a href="{{ path('app_user') }}" class="btn btn-success">
         Go to Another Page
     </a>
 {% endblock %}
