--- a/templates/atelier/show.html.twig
+++ b/templates/atelier/show.html.twig
@@ -34,7 +34,7 @@
                      style="width: 60px; height: 60px; object-fit: cover; margin-right: 10px;">
                     <i class="bi bi-person text-white" style="font-size: 30px;"></i>
                 </div>
-                <p class="card-text"> {{ workshop.user.username }}</p>
+                <span class="font-weight-bold">Nom de l'utilisateur</span>
             </div>
 
                 <!-- Image du Workshop -->
