--- a/templates/categorie/edit.html.twig
+++ b/templates/categorie/edit.html.twig
@@ -1,6 +1,4 @@
-
-
-{% block title %} Modifier la Catégorie {% endblock %}
+{% extends 'baseadmin.html.twig' %}
 
 {% block body %}
     <div class="container mt-4">
@@ -12,7 +10,7 @@
                 {{ form_widget(form.nom, { 'attr': {'class': 'form-control'} }) }}
                 {{ form_errors(form.nom) }}
             </div>
-
+            <a href="{{ path('categorie_index') }}" class="btn btn-secondary">Retour à la liste</a>
             <button type="submit" class="btn btn-primary">Modifier</button>
         {{ form_end(form) }}
     </div>
