--- a/templates/categorie/index.html.twig
+++ b/templates/categorie/index.html.twig
@@ -1,6 +1,6 @@
+{% extends 'baseadmin.html.twig' %}
 
 
-{% block title %}Liste des Catégories{% endblock %}
 
 {% block body %}
     <div class="container mt-4">
@@ -21,7 +21,6 @@
                         <td>{{ categorie.id }}</td>
                         <td>{{ categorie.nom }}</td>
                         <td>
-                            <a href="{{ path('categorie_show', {'id': categorie.id}) }}" class="btn btn-info btn-sm">Voir</a>
                             <a href="{{ path('categorie_edit', {'id': categorie.id}) }}" class="btn btn-warning btn-sm">Modifier</a>
                             <form method="post" action="{{ path('categorie_delete', {'id': categorie.id}) }}" style="display:inline;"
                                   onsubmit="return confirm('Voulez-vous vraiment supprimer cette catégorie ?');">
