--- a/templates/categorie/new.html.twig
+++ b/templates/categorie/new.html.twig
@@ -1,6 +1,6 @@
+{% extends 'baseadmin.html.twig' %}
 
 
-{% block title %}{{ categorie.id ? 'Modifier' : 'Ajouter' }} une Catégorie{% endblock %}
 
 {% block body %}
     <div class="container mt-4">
@@ -19,7 +19,7 @@
                     {% endfor %}
                 {% endif %}
             </div>
-
+            <a href="{{ path('categorie_index') }}" class="btn btn-secondary">Retour à la liste</a>
             <button type="submit" class="btn btn-primary">{{ categorie.id ? 'Modifier' : 'Ajouter' }}</button>
         {{ form_end(form) }}
 
