--- a/templates/workshop/index.html.twig
+++ b/templates/workshop/index.html.twig
@@ -1,7 +1,9 @@
 {% extends 'base3.html.twig' %}
 
+
              {% block header %}
 
+                            <a href="{{ path('atelier_index') }}" class="btn btn-secondary mt-3">Retour</a>
                             <h2 class="text-white">Liste de mes Workshops</h2>
 
             {% endblock %}
