--- a/templates/workshop/new.html.twig
+++ b/templates/workshop/new.html.twig
@@ -2,7 +2,9 @@
 
 
 
+
     {% block header %}
+        <a href="{{ path('workshop_index') }}" class="btn btn-secondary mt-3">Retour</a>
         <h2 class="text-white">Créer un nouveau Workshop</h2>
     {% endblock %}
 
