--- a/templates/workshop/show.html.twig
+++ b/templates/workshop/show.html.twig
@@ -1,6 +1,14 @@
 {% extends 'base3.html.twig' %}
 
+
+
+
+
+
+
+
 {% block header %}
+                <a href="{{ path('workshop_index') }}" class="btn btn-secondary mt-3">Retour</a>
                 <h2 class="text-white">Liste des Séances</h2>
 {% endblock %}
 
