initial commit of symfony

--- a/templates/base2.html.twig
+++ b/templates/base2.html.twig
@@ -67,7 +67,7 @@ https://templatemo.com/tm-590-topic-listing
                         <a class="nav-link click-scroll" href="{{ path('app_acceuil') }}">Acceuil</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link click-scroll" href="{{ path('atelier_index') }}">Workshops</a>
+                        <a class="nav-link click-scroll" href="#">Workshops</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link click-scroll" href="#">Événements</a>
@@ -107,7 +107,7 @@ https://templatemo.com/tm-590-topic-listing
                         </li>
                         {% if is_granted('ROLE_EDITOR') %}
                             <li class="nav-item">
-                                <a href="{{ path('workshop_index') }}" class="nav-link">Mes Workshops</a>
+                                <a href="#" class="nav-link">Mes Workshops</a>
                             </li>
                             <li class="nav-item">
                                 <a href="#" class="nav-link">Mes Événements</a>
