--- a/templates/seance/new.html.twig
+++ b/templates/seance/new.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base3.html.twig' %}
+{% extends 'base.html.twig' %}
 
 {% block header %}
     <a href="{{ path('workshop_show', {'id': workshop.id}) }}" class="btn btn-secondary mt-3">Retour</a>
