--- a/templates/workshop/show.html.twig
+++ b/templates/workshop/show.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base3.html.twig' %}
+{% extends 'base.html.twig' %}
 
 {% block header %}
                 <a href="{{ path('workshop_index') }}" class="btn btn-secondary mt-3">Retour</a>
