--- a/templates/home/adminpage.html.twig
+++ b/templates/home/adminpage.html.twig
@@ -12,7 +12,7 @@
                         <div class="row">
                             <div class="col-xl-3 col-md-6">
                                 <div class="card bg-primary text-white mb-4">
-                                    <div class="card-body">Evenments</div>
+                                    <div class="card-body">Primary Card</div>
                                     <div class="card-footer d-flex align-items-center justify-content-between">
                                         <a class="small text-white stretched-link" href="#">View Details</a>
                                         <div class="small text-white"><i class="fas fa-angle-right"></i></div>
@@ -68,38 +68,5 @@
                             </div>
                         </div>
 
-       
-
-
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Nom et Prenom</th>
-                <th>Email</th>
-                <th>Adresse</th>
-                <th>Rôle</th>
-                <th>Mot de passe</th>
-                <th>Actions</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for i in users %}
-            <tr>
-                <td>{{ i.username }}</td>
-                <td>{{ i.email }}</td>
-                <td>{{ i.adresse }}</td>
-                <td>{{ i.roles|join(', ') }}</td>
-                <td>{{ i.password }}</td>
-                <td>
-                    <a href="{{ path('app_edit', {'id': i.id}) }}" class="btn btn-primary">Modifier</a>
-                    <a href="{{ path('app_delete', {'id': i.id}) }}" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete this user?');">Supprimer</a>
-                </td>
-            </tr>
-            {% endfor %}
-        </tbody>
-    </table>
-
-    <a href="{{ path('app_user') }}" class="btn btn-success">
-        Go to Another Page
-    </a>
-{% endblock %}
+                        
+   {% endblock %}
